# LKey

./: LICENSE  README.md  interface.c  interface.h  interface.ui  lkey.c  lkey.desktop  lkey.gresource.xml  lkey.h  menu.ui  meson.build  resources.c  styles.css
